--- a/badge_sales_system/nbproject/project.properties
+++ b/badge_sales_system/nbproject/project.properties
@@ -58,7 +58,9 @@ javac.source=21
 javac.target=21
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
