--- a/badge_sales_system/nbproject/project.properties
+++ b/badge_sales_system/nbproject/project.properties
@@ -35,49 +35,21 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/badge_sales_system
 endorsed.classpath=
 excludes=
-file.reference.commons-beanutils-1.9.4.jar=lib\\commons-beanutils-1.9.4.jar
-file.reference.commons-collections-2.1.jar=lib\\commons-collections-2.1.jar
 file.reference.commons-collections4-4.4.jar=lib\\commons-collections4-4.4.jar
-file.reference.commons-digester-2.1.jar=lib\\commons-digester-2.1.jar
-file.reference.commons-javaflow-20060411.jar=lib\\commons-javaflow-20060411.jar
 file.reference.commons-logging-1.3.4.jar=lib\\commons-logging-1.3.4.jar
 file.reference.flatlaf-3.4.1.jar=lib\\flatlaf-3.4.1.jar
-file.reference.itext-2.1.7.js9.jar=lib\\itext-2.1.7.js9.jar
-file.reference.jackson-annotations-2.17.2.jar=lib\\jackson-annotations-2.17.2.jar
-file.reference.jackson-core-2.17.2.jar=lib\\jackson-core-2.17.2.jar
-file.reference.jackson-databind-2.17.2.jar=lib\\jackson-databind-2.17.2.jar
-file.reference.jackson-dataformat-xml-2.17.2.jar=lib\\jackson-dataformat-xml-2.17.2.jar
 file.reference.jasperreports-7.0.0.jar=lib\\jasperreports-7.0.0.jar
-file.reference.jasperreports-data-adapters-7.0.0.jar=lib\\jasperreports-data-adapters-7.0.0.jar
-file.reference.jasperreports-excel-poi-7.0.0.jar=lib\\jasperreports-excel-poi-7.0.0.jar
 file.reference.jcalendar-1.4.jar=lib\\jcalendar-1.4.jar
 file.reference.mysql-connector-j-8.4.0.jar=lib\\mysql-connector-j-8.4.0.jar
-file.reference.openpdf-2.0.3.jar=lib\\openpdf-2.0.3.jar
-file.reference.pdfbox-3.0.3.jar=lib\\pdfbox-3.0.3.jar
-file.reference.stax2-api-4.2.2.jar=lib\\stax2-api-4.2.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.flatlaf-3.4.1.jar}:\
-    ${file.reference.jasperreports-7.0.0.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.mysql-connector-j-8.4.0.jar}:\
+    ${file.reference.jasperreports-7.0.0.jar}:\
     ${file.reference.commons-logging-1.3.4.jar}:\
-    ${file.reference.commons-collections4-4.4.jar}:\
-    ${file.reference.commons-beanutils-1.9.4.jar}:\
-    ${file.reference.commons-collections-2.1.jar}:\
-    ${file.reference.commons-digester-2.1.jar}:\
-    ${file.reference.commons-javaflow-20060411.jar}:\
-    ${file.reference.openpdf-2.0.3.jar}:\
-    ${file.reference.jackson-annotations-2.17.2.jar}:\
-    ${file.reference.jackson-core-2.17.2.jar}:\
-    ${file.reference.jackson-databind-2.17.2.jar}:\
-    ${file.reference.jackson-dataformat-xml-2.17.2.jar}:\
-    ${file.reference.jasperreports-data-adapters-7.0.0.jar}:\
-    ${file.reference.jasperreports-excel-poi-7.0.0.jar}:\
-    ${file.reference.stax2-api-4.2.2.jar}:\
-    ${file.reference.itext-2.1.7.js9.jar}:\
-    ${file.reference.pdfbox-3.0.3.jar}
+    ${file.reference.commons-collections4-4.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
