--- a/badge_sales_system/nbproject/project.properties
+++ b/badge_sales_system/nbproject/project.properties
@@ -91,7 +91,7 @@ main.class=gui.SplashWindow
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_21
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
